# BMP-Images-processor

./: CMakeLists.txt  README.md  args_parser.cpp  args_parser.h  exceptions.cpp  exceptions.h  filter.cpp  filter.h  image.cpp  image.h  image_processor.cpp  readme.md  utils.cpp  utils.h
cli/: exceptions.cpp  exceptions.h  utils.cpp  utils.h
filters/: IChannelWiseFilter.cpp  IChannelWiseFilter.h  TCompositeFilter.cpp  TCompositeFilter.h  TConvolutionFilter.cpp  TConvolutionFilter.h  TCrop.cpp  TCrop.h  TEdgeDetectionConvFilter.cpp  TEdgeDetectionConvFilter.h  TEdgeDetectionFilter.cpp  TEdgeDetectionFilter.h  TEmbossingConvFilter.cpp  TEmbossingConvFilter.h  TEmbossingFilter.cpp  TEmbossingFilter.h  TGaussianBlurFilter.cpp  TGaussianBlurFilter.h  TGlassFilter.cpp  TGlassFilter.h  TGrayScaleFilter.cpp  TGrayScaleFilter.h  TMaximumFilter.cpp  TMaximumFilter.h  TMedianFilter.cpp  TMedianFilter.h  TMinimumFilter.cpp  TMinimumFilter.h  TNegativeFilter.cpp  TNegativeFilter.h  TOilPaintFilter.cpp  TOilPaintFilter.h  TSharpeningFilter.cpp  TSharpeningFilter.h  TThresholdFilter.cpp  TThresholdFilter.h  exceptions.cpp  exceptions.h  utils.cpp  utils.h
image/: bmpexceptions.cpp  bmpexceptions.h  exceptions.cpp  exceptions.h  utils.h
tests/: test_filters.cpp  test_images.cpp  test_parser.cpp
